# Continuous-Complex-Valued-Cellular-Automata

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ComplexMat.hpp  ComplexMatToColor.hpp  ComplexToColor.hpp  Grid.hpp  SpaceState.hpp  Transforms.hpp  main.hpp
src/: ComplexMat.cpp  ComplexMatToColor.cpp  ComplexToColor.cpp  Grid.cpp  SpaceState.cpp  Transforms.cpp  main.cpp
